feat: minor adjsutments